# software-engineering

lab1/: README.md  workspace.dsl
lab2/: .env  README.,d  auth_openapi.json  budget_openapi.json  docker-compose.yaml
lab2/auth/: Dockerfile  main.py  pyproject.toml
lab2/auth/config/: base.py
lab2/auth/ioc/: providers.py
lab2/budget/: main.py  pyproject.toml
lab3/: .env  auth_openapi.json  docker-compose.yaml  init.sql
lab3/auth/db/: depends.py
lab3/auth/ioc/: providers.py
lab3/budget/: main.py  pyproject.toml
lab3/budget/db/: __init__.py  expense.py  income.py  user.py
lab3/budget/ioc/: providers.py
lab4/: README.md  docker-compose.yaml  init.sql  workspace.dsl
lab4/auth/: main.py  pyproject.toml
lab4/auth/db/: user.py
lab4/budget/: .env  main.py  pyproject.toml
lab4/budget/db/: models.py
lab4/budget/ioc/: __init__.py
lab5/: .env  README.md  workspace.dsl
lab5/auth/: main.py
lab5/auth/config/: base.py
lab5/auth/db/: __init__.py  user.py
lab5/budget/config/: __init__.py  base.py
lab5/budget/db/: mongo.py  seed.py
